deploy/k8s/digitalbank/deployment-credit.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: digital-bank-credit-deployment
  namespace: digibank
  labels:
    app: digital-bank-credit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digital-bank-credit
  template:
    metadata:
      labels:
        app: digital-bank-credit
    spec:
      containers:
      - name: digital-bank-credit
        image: digisic/digitalcredit:latest
        ports:
          - name: db-credit-port
            containerPort: 8443
---

apiVersion: v1
kind: Service
metadata:
  name: digital-bank-credit-svc
  namespace: digibank
spec:
  selector:
    app: digital-bank-credit
    type: NodePort
  ports:
    - name: http-credit
      port: 3500  
      targetPort: db-credit-port
